# django-base-logger

./: LICENSE  README.md  pyproject.toml
django_base_logger/: __init__.py  logger.py
