[project]
name = "django-base-logger"
version = "0.1.0"
description = "Reusable Django logger package with BaseLogger class"
authors = [
    {name = "geth",email = "altemode@mail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
